test/src/e2e_vm_tests/test_programs/should_pass/language/import_with_different_callpaths/src/data_structures.sw
library;

pub struct SomeStruct<T> {
    pub a: T,
}

pub enum SomeEnum<T> {
    a: T,
}
