test/src/e2e_vm_tests/test_programs/should_fail/generics_multiple_type_arguments/src/inner_lib.sw
library inner_lib;

pub enum MyEnum<T> {
    VariantA: (),
    VariantB: T
}
